hphp/hack/test/typecheck/reactive/non_reactive_lambdas.php.like_types.exp
File "non_reactive_lambdas.php", line 5, characters 14-24:
Wrong type hint (Typing[4110])
File "non_reactive_lambdas.php", line 5, characters 21-23:
Expected int
File "non_reactive_lambdas.php", line 5, characters 21-23:
Considering that this type argument is invariant with respect to Vector
File "non_reactive_lambdas.php", line 5, characters 21-23:
But got dynamic because it is an unenforceable type
